# aa2nucaln

./: Cargo.toml  LICENSE  README.md  create_hmms.sh
fastas/: N-term-TEN.faa  TERT.faa  TERT_thumb.faa  fasta.faa  telomerase_RBD.faa
output/: N-term-TEN.fna  N-term-TEN.hmm  TERT_thumb.fna  TERT_thumb.hmm  telomerase_RBD.hmm
src/: codons.rs  lib.rs  main.rs  matrix.rs  writer.rs
