[package]
name = "aa2nucaln"
version = "0.1.1"
authors = ["Max Brown <max.carter-brown@aru.ac.uk>"]
edition = "2021"
description = "Convert an amino acid alignment into a nucleotide alignment."
homepage = "https://github.com/tolkit/aa2nucaln"
repository = "https://github.com/tolkit/aa2nucaln"
license = "MIT"
keywords = ["nucelotide", "DNA", "alignment", "genomics"]
categories = ["science::bioinformatics::sequence-analysis", "science::bioinformatics::genomics"]

[dependencies]
bio = "0.41.0"
clap = {version = "3.1.18", features = ["cargo"]}
anyhow = "1.0.57"
atty = "0.2"
